--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ana Rachel Melo # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/fotoAR.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Engenheira civil descobrindo o mundo dos dados 
   <br><br>
