--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Ana Rachel Melo # your name (or website title) here
 logo: "/images/fotoAR.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Engenheira civil descobrindo o mundo dos dados 
+  Civil engineer discovering the world of data 
   <br><br>
-  Atualmente, estudante de ciência de dados e pesquisadora interna na Moises.ai, trabalhando com processamento de áudio (música) para machine learning e deep learning.
+  Currently, a data science student and in-house researcher at Moises.ai, working with audio (music) processing for machine learning and deep learning.
   <br><br>
   <a href="https://www.linkedin.com/in/ana-rachel-melo/">View My LinkedIn Profile</a> 
   
