--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ana Rachel Melo # your name (or website title) here
 logo: "/images/fotoAR.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Civil engineer discovering the world of data 
+  Civil engineer discovering the world of data. 
   <br><br>
   Currently, a data science student and in-house researcher at Moises.ai, working with audio (music) processing for machine learning and deep learning.
   <br><br>
